[tool.poetry]
name = "diip"
version = "0.0.1"
description = "Dependency Injection In Python"
authors = ["Billuc <billuc@hotmail.fr>"]
license = "MIT"
readme = "README.md"

keywords = ["diip", "dependency injection", "dependency", "python"]

homepage = "https://github.com/Billuc/diip"
repository = "https://github.com/Billuc/diip"
documentation = "https://github.com/Billuc/diip"

classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

include = ["diip/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "diip"
]

[tool.black]
line-length = 92